# dilithium_threshold

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  Readme.md
.cargo-husky/hooks/: pre-commit
.github/workflows/: benchmarks.yml  ci.yml  coverage.yml  main.yml  tests.yml  versions.yml
core/: Cargo.toml
core/benches/: basic.rs  sign.rs  threshold.rs
core/examples/: basic.rs  threshold.rs
core/src/: config.rs  dilithium.rs  error.rs  hash.rs  lib.rs  matrix.rs  params.rs  shamir.rs  sign.rs  threshold.rs  traits.rs  utils.rs
core/src/basic/: keypair.rs  mod.rs  sign.rs  utils.rs
core/src/basic/keys/: keypair.rs  mod.rs  private.rs  public.rs
core/src/dilithium/: error.rs  mod.rs  params.rs  shamir.rs  sign.rs  utils.rs
core/src/dilithium/shamir/: accumulator.rs  adapted.rs  error.rs  share.rs
core/src/dilithium/threshold/: error.rs  key_share.rs  mod.rs  partial.rs  sign.rs
core/src/matrix/: hash.rs  matrix.rs  matrix_a.rs  mod.rs  traits.rs  utils.rs
core/src/signature/: keypair.rs  mod.rs  sign.rs  tests.rs
core/src/threshold/: dilithium.rs  shamir.rs  threshold.rs  traits.rs  utils.rs
core/tests/: correctness_proof.rs  prove_correctness.rs  threshold_integration.rs
logic/: Cargo.toml
logic/src/: dilithium.rs  error.rs  hash.rs  keypair.rs  lib copy.rs  lib.rs  matrix.rs  params.rs  poly.rs  shamir.rs  sign.rs  tests.rs  threshold.rs  utils.rs
math/: Cargo.toml
math/proptest-regressions/: field_element.txt  ntt.txt  poly.txt  polynomial.txt  zerofier_tree.txt
math/src/: builders.rs  constants.rs  error.rs  field_element.rs  lib.rs  macros.rs  matrix.rs  mont.rs  ntt.rs  poly.rs  poly_vector.rs  polynomial.rs  prelude.rs  traits.rs  utils.rs  zerofier_tree.rs
scripts/: compare_bench.py
scripts/pre-commit/: cargo-clippy.sh  cargo-fmt.sh  cargo-test.sh
tests/: Cargo.toml
tests/src/: integration.rs  lib.rs
xtask/src/: main.rs
