[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
math = { path = "../math"}
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = { version = "0.8", features = ["min_const_gen"] }
rand_distr = "0.4"
sha3 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0", default-features = false }
sha2 = "0.10"
arbitrary = { version = "1", features = ["derive"] }
