[package]
name = "dilithium-core"
version = "0.1.0"
edition = "2024"

[dependencies]
math = { path = "../math"}
sha3 = "0.10"      # SHAKE128/SHAKE256
rand = { version = "0.8", features = ["min_const_gen"] }
rand_distr = "0.4"
num-traits = "0.2"
sha2 = "0.10"
arbitrary = { version = "1", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"
rand_chacha = "0.3"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "threshold"
harness = false

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "threshold"
path = "examples/threshold.rs"
